--- a/devops/preview.yaml
+++ b/devops/preview.yaml
@@ -50,6 +50,7 @@ steps:
         docker buildx build \
             -t us-east1-docker.pkg.dev/$PROJECT_ID/gcb-test/images:$SHORT_SHA \
             --cache-from=type=registry,ref=us-east1-docker.pkg.dev/$PROJECT_ID/gcb-test/builder \
+            --push .
     timeout: 600s
 
   - name: 'gcr.io/cloud-builders/docker'
