--- a/devops/preview.yaml
+++ b/devops/preview.yaml
@@ -17,6 +17,7 @@ steps:
     args:
       - '-c'
       - |
+        docker buildx create --use &&
         docker buildx build \
             --cache-from=type=registry,ref=us-east1-docker.pkg.dev/$PROJECT_ID/gcb-test/builder,mode=max \
             --cache-to=type=inline \
