--- a/devops/preview.yaml
+++ b/devops/preview.yaml
@@ -17,10 +17,9 @@ steps:
     args:
       - '-c'
       - |
-        docker buildx create --use && \
         docker buildx build \
             --cache-from=type=registry,ref=us-east1-docker.pkg.dev/$PROJECT_ID/gcb-test/builder \
-            --cache-to=type=inline,mode=max \
+            --cache-to=type=inline \
             --target builder \
             --push -t us-east1-docker.pkg.dev/$PROJECT_ID/gcb-test/builder .
   - name: 'gcr.io/cloud-builders/docker'
