--- a/devops/pr.yaml
+++ b/devops/pr.yaml
@@ -6,7 +6,8 @@ steps:
    - name: 'gcr.io/cloud-builders/git'
      id: 'Replace Version'
      entrypoint: 'bash'
-     waitFor: 'Get Version'
+     waitFor: 
+     - 'Get Version'
      args: 
      - '-c'
      - |
