--- a/devops/pr.yaml
+++ b/devops/pr.yaml
@@ -11,17 +11,8 @@ steps:
      args: 
      - '-c'
      - |
-      if [ -z "$TAG_NAME"]
-      then
-          echo here
-          TAG_NAME=$(git describe --abbrev=0 --tags)
-          TAG_NAME=$(sed 's/^v//' <<< $TAG_NAME)
-          echo $TAG_NAME > /workspace/version.txt
-          echo $TAG_NAME
-      else
-          TAG_NAME=$(sed 's/^v//' <<< $TAG_NAME)
-          echo $TAG_NAME > /workspace/version.txt
-          echo $TAG_NAME
-      fi
+       set -e
+       chmod +x ./devops/scripts/git-version.bash
+       ./devops/scripts/git-version.bash
 
   
