--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       uses: 'google-github-actions/setup-gcloud@v0'
 
     - name: 'Use gcloud CLI'
-      run: 'gcloud container images add-tag us-east5-docker.pkg.dev/cogent-calling-112015/gcb-/builder:${{ github.event.number } us-east5-docker.pkg.dev/cogent-calling-112015/gcb-tes/builder:stag'
+      run: 'gcloud container images add-tag us-east5-docker.pkg.dev/cogent-calling-112015/gcb-/images:${{ github.event.number }} us-east5-docker.pkg.dev/cogent-calling-112015/gcb-tes/images:stag'
   close_job:
     # this job will only run if the PR has been closed without being merged
     if: github.event.pull_request.merged == false
