--- a/devops/preview.yaml
+++ b/devops/preview.yaml
@@ -76,7 +76,7 @@ steps:
   #           --push .
   #   timeout: 600s
   - name: 'gcr.io/cloud-builders/docker:20.10.3'
-    args: ['buildx', 'build', '--cache-from', 'type=registry,ref=us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/builder', '--cache-to', 'type=registry,ref=us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/images:$SHORT_SHA', '--push', '-t', 'us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/images:$SHORT_SHA', '.' ]
+    args: ['buildx', 'build', '--cache-from', 'type=registry,ref=us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/builder', '--cache-to', 'type=registry,ref=us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/images:$SHORT_SHA', '--push', '-t', 'us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/images:$SHORT_SHA', '-t', 'us-east5-docker.pkg.dev/$PROJECT_ID/gcb-test/images:$_PR_NUMBER', '.' ]
     id: 'Build'
     waitFor:
       - 'Build Builder'
